Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33731

Windows: crash in QProcessPrivate::findExitCode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.0
    • 5.1.1
    • Core: I/O
    • None
    • 7aa327648c2f2744e381582a98813a545b4f1cb1

      What happen is this:
      When QProcessPrivate::findExitCode is called (in qprocess_win.cpp), pid is 0, hence the immediate crash.
      Simply adding "if (pid)" solves the problem.

      Note: my code was not revealling this problem with Qt 4.8.5

      Note: I have entered the maybe related issue in the same time: QTBUG-33730

        1. crashtrace.zip
          71 kB
        2. main.cpp
          1 kB
        For Gerrit Dashboard: QTBUG-33731
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            jirauser26727 user-04d21 (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes